--- a/src/html/partials/layout/headerNav.html
+++ b/src/html/partials/layout/headerNav.html
@@ -1,6 +1,6 @@
 <header class="header tCenter">
     <a href="#">
-        <img src="images/logos/logo_otro.svg" alt="" width="160">
+        <img src="images/logos/logo_otro.svg" alt="" width="160" height="55">
     </a>
 </header>
  
