--- a/src/scss/common/typography.scss
+++ b/src/scss/common/typography.scss
@@ -28,3 +28,11 @@ body {
 .tCenter {
   text-align: center;
 }
+
+h2 {
+  font-weight: 800;
+  font-size: 50px;
+  @media only screen and (max-width: $ldown) {
+    font-size: 36px;
+  }
+}
