--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -6,5 +6,9 @@
   @media only screen and (max-width: $ldown) {
     padding-top: 30px;
     padding-bottom: 30px;
+
+    img {
+      width: 124px;
+    }
   }
 }
