--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -9,7 +9,8 @@
   --color_black: #010000;
 
   --gutter: 16px;
+  --gap: 20px;
 }
 
-$large: 992px;
-$ldown: 991px;
+$large: 1024px;
+$ldown: 1023px;
