--- a/src/scss/common/typography.scss
+++ b/src/scss/common/typography.scss
@@ -32,6 +32,7 @@ body {
 h2 {
   font-weight: 800;
   font-size: 50px;
+  line-height: 1.2;
   @media only screen and (max-width: $ldown) {
     font-size: 36px;
   }
