--- a/src/html/partials/layout/footer.html
+++ b/src/html/partials/layout/footer.html
@@ -1,47 +1,4 @@
-<footer class="footer bg-secondary text-light">
-    <div class="container ">
-        <div class="row align-items-center">
-            <div class="col col-12 col-lg-3 text-center text-lg-left">
-                @@include("components/picture-resp2_native_lazy.html", {
-                    "class": "", 
-                    "classImg": "img-fluid",
-                    "src": "images/logos/logo_tch_bt",
-                    "ext": "png",  
-                    "alt": "",
-                    "picWidthHeight": 'width="136" height="85"',
-                })
-            </div>
-            <div class="col col-12 col-lg-9">
-                <div class="d-lg-flex text-center text-lg-left">
-                    <p class="text-uppercase mb-0 mt-4 mt-lg-0 me-0 me-lg-3">
-                        locations we serve:
-                    </p>
-                    <ul class="d-lg-flex text-center text-lg-left mt-4 mt-lg-0">
-                        <li>
-                            Toronto
-                        </li>
-                        <li>
-                            Vaughan
-                        </li>
-                        <li>
-                            Richmond Hill
-                        </li>
-                        <li>
-                            Mississauga
-                        </li>
-                        <li>
-                            Etobicoke
-                        </li>
-                        <li>
-                            Markham
-                        </li>
-                        <li>
-                            Kitchener
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+<footer class="footer tCenter">
+    Copyright © 2025 Otro. Toate drepturile rezervate.
 </footer>
    
