--- a/src/html/partials/sections/sectionGallery.html
+++ b/src/html/partials/sections/sectionGallery.html
@@ -1,10 +1,10 @@
 <section class="sectionGallery">
-    <div class="container--inner gridContainer sectionGallery__container">
+    <div class="container--inner gridContainer gridContainerACenter sectionGallery__container">
         <div class="sectionGallery__textCol">
             <h2 class="">
                 OTRO – Distribuie Eleganța Eco-Friendly
             </h2>
-            <p class="sectionGallery__text">
+            <p class="section__text">
                 OTRO înseamnă eleganță atemporală și modă responsabilă. Îmbrăcămintea noastră sustenabilă îmbină luxul cu respectul pentru mediu, oferind o colecție distinctivă care se remarcă pe piață.
                 <br><br>
                 Ca distribuitor, vei beneficia de produse premium, marje de profit atractive și suport complet în marketing, training și logistică. Ne asigurăm că operațiunile tale decurg fără probleme, astfel încât să te poți concentra pe creșterea afacerii și pe satisfacerea clienților tăi.
@@ -13,7 +13,7 @@
                     Alătură-te nouă astăzi și contribuie la viitorul modei sustenabile!
                 </b>
             </p>
-            <a href="#" class="btn btn--primary sectionGallery__btn">
+            <a href="#devenitiDistribuitor" class="btn btn--primary section__btn">
                 Deveniți distribuitor
             </a>
         </div>
