--- a/src/html/partials/sections/sectionInfo.html
+++ b/src/html/partials/sections/sectionInfo.html
@@ -1,5 +1,28 @@
 <section class="sectionInfo">
-    <div class="container--inner">
-        dasd
+    <div class="container--inner gridContainer gridContainerACenter">
+        <div>
+            @@include("components/picture-resp2_native_lazy.html", {
+                "class": "sectionGallery__img", 
+                "classImg": "", 
+                "src": "images/sections/info_img",
+                "ext": "jpg",   
+                "alt": "",
+                "picWidthHeight": 'width="630" height="523"',
+              })
+        </div>
+        <div>
+            <h2>
+                Mesaj de la CEO 
+            </h2>
+            <p class="section__text">
+                La OTRO, redefinim luxul prin sustenabilitate, eleganță și inovație. Creăm îmbrăcăminte premium din materiale eco-friendly, oferind partenerilor noștri oportunități de creștere într-o piață în continuă evoluție. <br>
+                Ne angajăm să susținem distribuitorii noștri cu produse de calitate, marje competitive și suport constant, construind împreună un viitor al modei mai responsabil și mai prosper.
+                <br><br>
+                <b>Jugănaru Ionuț-Cătălin – CEO</b>
+            </p>
+            <a href="#devenitiDistribuitor" class="btn btn--primary section__btn">
+                Deveniți distribuitor
+            </a>
+        </div>
     </div>
 </section>
