--- a/src/html/partials/sections/sectionJumbo.html
+++ b/src/html/partials/sections/sectionJumbo.html
@@ -7,7 +7,7 @@
         realizată din materiale premium precum Tencel și mătase vegană.
     </p>
 
-    <a href="#" class="btn btn--primary sectionJumbo__btn">
+    <a href="#devenitiDistribuitor" class="btn btn--primary sectionJumbo__btn">
         Deveniți distribuitor
     </a>
 </section>
