--- a/src/scss/layout/layout.scss
+++ b/src/scss/layout/layout.scss
@@ -27,6 +27,10 @@ footer {
   }
 }
 
+.gridContainerACenter {
+  align-items: center;
+}
+
 .smDnone {
   @media only screen and (max-width: $ldown) {
     display: none;
