--- a/src/html/partials/sections/sectionInfo.html
+++ b/src/html/partials/sections/sectionInfo.html
@@ -1,16 +1,16 @@
 <section class="sectionInfo">
     <div class="container--inner gridContainer gridContainerACenter">
-        <div>
+        <div class="">
             @@include("components/picture-resp2_native_lazy.html", {
-                "class": "sectionGallery__img", 
-                "classImg": "", 
+                "class": "", 
+                "classImg": "imgSmFluid", 
                 "src": "images/sections/info_img",
                 "ext": "jpg",   
                 "alt": "",
                 "picWidthHeight": 'width="630" height="523"',
               })
-        </div>
-        <div>
+        </div> 
+        <div class="section__lgTtL section__img">
             <h2>
                 Mesaj de la CEO 
             </h2>
