--- a/src/scss/sections/sectionInfo.scss
+++ b/src/scss/sections/sectionInfo.scss
@@ -6,3 +6,13 @@
     padding: 100px var(--gutter);
   }
 }
+
+.sectionInfo__textCol {
+  @media only screen and (max-width: $ldown) {
+    order: -1;
+  }
+
+  @media only screen and (min-width: $large) {
+    padding-left: 66px;
+  }
+}
