--- a/src/html/partials/sections/sectionPres.html
+++ b/src/html/partials/sections/sectionPres.html
@@ -1,4 +1,4 @@
-<section class="sectionGallery">
+<section class="sectionPres">
     <div class="container--inner gridContainer gridContainerACenter sectionGallery__container">
         <div class="section__lgTtR">
             <h2 class="">
@@ -14,18 +14,18 @@
             </a>
         </div>
         <div class="section__lgTtR section__img">
-            <div class="sectionGallery__galBox">
+            <div class="sectionPres__galBox">
                 @@include("components/picture-resp2_native_lazy.html", {
-                    "class": "sectionGallery__img", 
-                    "classImg": "img-fluid", 
+                    "class": "smDnone", 
+                    "classImg": "", 
                     "src": "images/sections/pres_img_1",
                     "ext": "jpg",   
                     "alt": "",
                     "picWidthHeight": 'width="305" height="536"',
                   })
                 @@include("components/picture-resp2_native_lazy.html", {
-                    "class": "sectionGallery__img", 
-                    "classImg": "img-fluid", 
+                    "class": "", 
+                    "classImg": "imgSmFluid", 
                     "src": "images/sections/pres_img_2",
                     "ext": "jpg",   
                     "alt": "",
