--- a/src/scss/main.controller.scss
+++ b/src/scss/main.controller.scss
@@ -20,3 +20,4 @@
 @import "sections/sectionJumbo";
 @import "sections/sectionGallery";
 @import "sections/sectionInfo";
+@import "sections/sectionPres";
