--- a/src/html/partials/sections/sectionPres.html
+++ b/src/html/partials/sections/sectionPres.html
@@ -13,7 +13,7 @@
                 Deveniți distribuitor
             </a>
         </div>
-        <div class="section__lgTtR section__img">
+        <div class="section__img">
             <div class="sectionPres__galBox">
                 @@include("components/picture-resp2_native_lazy.html", {
                     "class": "smDnone", 
@@ -21,7 +21,7 @@
                     "src": "images/sections/pres_img_1",
                     "ext": "jpg",   
                     "alt": "",
-                    "picWidthHeight": 'width="305" height="536"',
+                    "picWidthHeight": 'width="305" height="505"',
                   })
                 @@include("components/picture-resp2_native_lazy.html", {
                     "class": "", 
@@ -29,7 +29,7 @@
                     "src": "images/sections/pres_img_2",
                     "ext": "jpg",   
                     "alt": "",
-                    "picWidthHeight": 'width="305" height="536"',
+                    "picWidthHeight": 'width="305" height="505"',
                   })
             </div>
 
