--- a/src/html/partials/sections/sectionForm.html
+++ b/src/html/partials/sections/sectionForm.html
@@ -1,3 +1,84 @@
-<section id="devenitiDistribuitor">
+<section id="devenitiDistribuitor" class="section--common sectionForm">
+    <div class="container--inner">
+        <h2 class="tCenter">
+            Devino Distribuitorul Nostru Astăzi
+        </h2>
+        <p class="section__text tCenter sectionForm___text">
+            Dacă ești interesat și vrei să afli mai multe, completează formularul de mai jos, <span class="smDnone"> <br></span>
+            iar un membru al echipei noastre te va contacta în curând.
+        </p>
+        <form action="">
+            <div class="sectionForm__box">
+                <div class="inputBox">
+                    <label for="uName" class="inputBox__label">Nume*</label>
+                    <input type="text" name="name" id="uName" class="inputBox__trigger inputBox__trigger--wide" placeholder="Nume" required>
+                </div>
+                <div class="inputBox">
+                    <label for="uSname" class="inputBox__label">Prenume*</label>
+                    <input type="text" name="sName" id="uSname" class="inputBox__trigger inputBox__trigger--wide" placeholder="Prenume" required>
+                </div>
+                <div class="inputBox ">
+                    <label for="uPhone" class="inputBox__label">Număr de telefon*</label>
+                    <div class="inputBox__inner inputBox__inner--relative">
+                        <img src="images/logos/flag_rm.svg" alt="" class="inputBox__flag">
+                        <input type="number" name="sName" id="uPhone" class="inputBox__trigger inputBox__trigger--wide inputBox__trigger--flag" placeholder="Număr de telefon" required>
+                    </div>
+                </div>
+                <div class="inputBox">
+                    <label for="uEmail" class="inputBox__label">Email*</label>
+                    <input type="text" name="uEmail" id="uEmail" class="inputBox__trigger inputBox__trigger--wide" placeholder="Email" required>
+                </div>
+                <div class="inputBox">
+                    <label for="uCountry" class="inputBox__label">Țară*</label>
+                    <select id="uCountry" class="inputBox__trigger inputBox__trigger--wide inputBox__trigger--select" required>
+                        <option value="1">România</option>
+                        <option value="2">Text</option>
+                        <option value="3">Text2</option>
+                        <option value="4">Text3</option>
+                    </select>
+                </div>
+                <div class="inputBox">
+                    <label for="uWeb" class="inputBox__label">Website*</label>
+                    <input type="text" name="uWeb" id="uWeb" class="inputBox__trigger inputBox__trigger--wide" placeholder="Website" required>
+                </div>
+                <div class="inputBox">
+                    <label for="uRCompany" class="inputBox__label">Aveți o companie înregistrată? *</label>
+                    <select id="uRCompany" class="inputBox__trigger inputBox__trigger--wide inputBox__trigger--select" required>
+                        <option ></option>
+                        <option value="2">Text</option>
+                        <option value="">Text2</option>
+                    </select>
+                </div>
+                <div class="inputBox">
+                    <label for="uProdsList" class="inputBox__label">Ce tip de produse sau servicii furnizați în prezent? *</label>
+                    <textarea id="uProdsList" name="uProdsList" rows="4" cols="50" class="inputBox__trigger inputBox__trigger--wide inputBox__trigger--noRes" required></textarea>
+                </div>
+                <div class="inputBox">
+                    <label for="uProdsCap" class="inputBox__label">Care sunt capacitățile tale de depozitare? *</label>
+                    <textarea id="uProdsCap" name="uProdsCap" rows="4" cols="50" class="inputBox__trigger inputBox__trigger--wide inputBox__trigger--noRes" required></textarea>
+                </div>
+                <div class="inputBox">
+                    <label for="uBadget" class="inputBox__label">Care este bugetul dvs. pe comandă pentru acest tip de parteneriat? *</label>
+                    <select id="uBadget" class="inputBox__trigger inputBox__trigger--wide inputBox__trigger--select" required>
+                        <option ></option>
+                        <option value="2">Text</option>
+                        <option value="">Text2</option>
+                    </select>
+                </div>
+                <div class="inputBox">
+                    <label for="uDesc" class="inputBox__label">Descrie-ți afacerea în 1-3 propoziții. *</label>
+                    <textarea id="uDesc" name="uProdsList" rows="4" cols="50" class="inputBox__trigger inputBox__trigger--wide inputBox__trigger--noRes" required ></textarea>
+                </div>
+                <div class="inputBox inputBox--checkBox">
+                    <input type="checkbox" name="uAgr" id="uAgr" class="inputBox__checkTrigger" required>
+                    <label for="uAgr" class="inputBox__label inputBox__label--withCheckBox">Am citit și sunt de acord cu Termenii și condițiile și Politica de confidențialitate.</label>
+                </div>
+
+                <button class="btn btn--primary" type="submit">
+                    Contactează-ne
+                </button>
+            </div>
+        </form>
+    </div>
 
 </section>
