--- a/src/html/partials/sections/sectionGallery.html
+++ b/src/html/partials/sections/sectionGallery.html
@@ -1,6 +1,6 @@
 <section class="sectionGallery">
     <div class="container--inner gridContainer gridContainerACenter sectionGallery__container">
-        <div class="sectionGallery__textCol">
+        <div class="sectionGallery__textCol section__lgTtR">
             <h2 class="">
                 OTRO – Distribuie Eleganța Eco-Friendly
             </h2>
@@ -17,7 +17,7 @@
                 Deveniți distribuitor
             </a>
         </div>
-        <div class="section__lgTtR section__img">
+        <div class=" section__img">
             <div class="sectionGallery__galBox">
                 @@include("components/picture-resp2_native_lazy.html", {
                     "class": "sectionGallery__img", 
