--- a/src/html/partials/sections/sectionInfo.html
+++ b/src/html/partials/sections/sectionInfo.html
@@ -1,4 +1,4 @@
-<section class="sectionInfo">
+<section class="section--common sectionInfo">
     <div class="container--inner gridContainer gridContainerACenter">
         <div class="">
             @@include("components/picture-resp2_native_lazy.html", {
