--- a/src/html/partials/sections/sectionJumbo.html
+++ b/src/html/partials/sections/sectionJumbo.html
@@ -3,7 +3,7 @@
         OTRO
     </h1>
     <p class="sectionJumbo__text">
-        Partenerul tău în distribuția de îmbrăcăminte de lux sustenabilă,
+        Partenerul tău în distribuția de îmbrăcăminte de lux sustenabilă, <span class="smDnone"> <br></span>
         realizată din materiale premium precum Tencel și mătase vegană.
     </p>
 
