--- a/src/html/partials/sections/sectionPres.html
+++ b/src/html/partials/sections/sectionPres.html
@@ -1,4 +1,4 @@
-<section class="sectionPres">
+<section class="section--common sectionPres">
     <div class="container--inner gridContainer gridContainerACenter sectionGallery__container">
         <div class="section__lgTtR">
             <h2 class="">
