--- a/src/scss/main.controller.scss
+++ b/src/scss/main.controller.scss
@@ -10,6 +10,7 @@
 
 //componetns
 @import "./components/btn";
+@import "./components/inputBox";
 //Layout
 @import "layout/footer";
 @import "layout/header";
@@ -21,3 +22,4 @@
 @import "sections/sectionGallery";
 @import "sections/sectionInfo";
 @import "sections/sectionPres";
+@import "sections/sectionForm";
