--- a/src/scss/sections/sectionCommon.scss
+++ b/src/scss/sections/sectionCommon.scss
@@ -23,3 +23,13 @@
     padding-left: 66px;
   }
 }
+
+.section--common {
+  @media only screen and (min-width: $large) {
+    padding: 100px var(--gutter);
+  }
+
+  @media only screen and (max-width: $ldown) {
+    padding: 50px var(--gutter);
+  }
+}
