--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -5,6 +5,7 @@
 
   --color_purple: #f2eee8;
   --color_primary: #f05d5e;
+  --color_primary2: #a84141;
   --color_white: #fff;
   --color_black: #010000;
 
