--- a/src/html/partials/sections/sectionGallery.html
+++ b/src/html/partials/sections/sectionGallery.html
@@ -17,7 +17,7 @@
                 Deveniți distribuitor
             </a>
         </div>
-        <div class=" section__img">
+        <div class="sectionGallery__galCol">
             <div class="sectionGallery__galBox">
                 @@include("components/picture-resp2_native_lazy.html", {
                     "class": "sectionGallery__img", 
