--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -2,6 +2,7 @@
   --fontPr: "Barlow", sans-serif;
   --fontSc: "Plus Jakarta Sans", sans-serif;
   --fontSize: 17px;
+  --fontSizeSm: 15px;
 
   --color_purple: #f2eee8;
   --color_primary: #f05d5e;
