--- a/src/html/partials/sections/sectionPres.html
+++ b/src/html/partials/sections/sectionPres.html
@@ -1,6 +1,6 @@
 <section class="section--common sectionPres">
-    <div class="container--inner gridContainer gridContainerACenter sectionGallery__container">
-        <div class="section__lgTtR">
+    <div class="container--inner sectionGallery__container">
+        <div class="sectionPres__textCol">
             <h2 class="">
                 Îmbrăcăminte Sustenabilă de Lux
             </h2>
@@ -23,14 +23,10 @@
                     "alt": "",
                     "picWidthHeight": 'width="305" height="505"',
                   })
-                @@include("components/picture-resp2_native_lazy.html", {
-                    "class": "", 
-                    "classImg": "imgSmFluid", 
-                    "src": "images/sections/pres_img_2",
-                    "ext": "jpg",   
-                    "alt": "",
-                    "picWidthHeight": 'width="305" height="505"',
-                  })
+                  <video autoplay loop muted playsinline class="sectionPres__galVideo">
+                    <source src="video/video_press.mp4" type="video/mp4">
+                  </video>
+                  
             </div>
 
         </div>
