--- a/src/scss/sections/sectionPres.scss
+++ b/src/scss/sections/sectionPres.scss
@@ -1,9 +1,37 @@
 .sectionPres {
   background-color: var(--color_purple);
+
+  @media only screen and (max-width: $ldown) {
+    padding-bottom: 0px;
+    margin-bottom: -1px;
+  }
 }
+
 .sectionPres__galBox {
+  @media only screen and (max-width: $ldown) {
+    margin-left: -17px;
+    margin-right: -17px;
+  }
   @media only screen and (min-width: $large) {
     display: flex;
     gap: var(--gap);
+  }
+}
+
+.sectionPres__galImg {
+  @media only screen and (min-width: $large) {
+    width: 305px;
+    height: 542px;
+    object-fit: cover;
+  }
+}
+
+.sectionPres__video {
+  @media only screen and (max-width: $ldown) {
+    display: block;
+  }
+  @media only screen and (min-width: $large) {
+    width: 305px;
+    height: 542px;
   }
 }
