--- a/src/scss/sections/sectionPres.scss
+++ b/src/scss/sections/sectionPres.scss
@@ -1,28 +1,25 @@
-.sectionPres {
-  background-color: var(--color_purple);
-}
-
-.sectionPres__galBox {
-  @media only screen and (min-width: $large) {
-    display: flex;
-    gap: var(--gap);
+@media only screen and (max-width: 1023px) {
+  .sectionGallery .sectionGallery__galCol {
+    margin-left: -15px;
   }
-}
 
-.sectionPres__galImg {
-  @media only screen and (min-width: $large) {
-    width: 305px;
-    height: 542px;
-    object-fit: cover;
-  }
-}
-
-.sectionPres__video {
-  @media only screen and (max-width: $ldown) {
+  .sectionGallery .sectionGallery__img img {
     display: block;
   }
-  @media only screen and (min-width: $large) {
-    width: 305px;
-    height: 542px;
+
+  .sectionInfo .section__lgTtL {
+    order: -1;
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
+
+  .sectionPres {
+    padding-bottom: 0px;
+    margin-bottom: -1px;
+  }
+
+  .sectionPres .sectionPres__galBox {
+    margin-left: -17px;
+    margin-right: -17px;
   }
 }
